Closed
Bug 625506
Opened 10 years ago
Closed 10 years ago
crash [@ nsImapCacheStreamListener::OnStartRequest] (Mac&linux), [@ nsImapCacheStreamListener::OnStartRequest(nsIRequest*, nsISupports*)] (windows)
Categories
(MailNews Core :: Networking: IMAP, defect)
Tracking
(blocking-thunderbird5.0 alpha3+)
RESOLVED
FIXED
Thunderbird 3.3a3
Tracking | Status | |
---|---|---|
blocking-thunderbird5.0 | --- | alpha3+ |
People
(Reporter: wsmwk, Assigned: Bienvenu)
References
Details
(Keywords: crash, regression)
Crash Data
Attachments
(2 files)
85.48 KB,
text/plain
|
Details | |
1.38 KB,
patch
|
standard8
:
review+
|
Details | Diff | Splinter Review |
~#10 crash in 3.3a2pre trunk regression crash [@ nsImapCacheStreamListener::OnStartRequest] (Mac&linux), [@ nsImapCacheStreamListener::OnStartRequest(nsIRequest*, nsISupports*)] (windows) first appearance 20101229 nsImapCacheStreamListener::OnStartRequest(nsIRequest*, nsISupports*) [1] 20101220 nsImapCacheStreamListener::OnStartRequest [2] [1] bp-b29d375f-011b-4c6f-8998-5a8592101230 EXCEPTION_ACCESS_VIOLATION_READ 0x0 0 xul.dll nsImapCacheStreamListener::OnStartRequest mailnews/imap/src/nsImapProtocol.cpp:8633 1 xul.dll nsInputStreamPump::OnStateStart netwerk/base/src/nsInputStreamPump.cpp:441 2 xul.dll nsInputStreamPump::OnInputStreamReady netwerk/base/src/nsInputStreamPump.cpp:397 3 xul.dll nsOutputStreamReadyEvent::Run xpcom/io/nsStreamUtils.cpp:112 4 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:626 5 xul.dll NS_ProcessNextEvent_P objdir-tb/mozilla/xpcom/build/nsThreadUtils.cpp:250 6 xul.dll nsBaseAppShell::Run widget/src/xpwidgets/nsBaseAppShell.cpp:195 [2] bp-b4418365-8187-4aed-9c1e-255762101220 SIGSEGV 0x0 0 libxul.so nsImapCacheStreamListener::OnStartRequest mailnews/imap/src/nsImapProtocol.cpp:8633 1 libxul.so nsInputStreamPump::OnStateStart netwerk/base/src/nsInputStreamPump.cpp:441 2 libxul.so nsInputStreamPump::OnInputStreamReady netwerk/base/src/nsInputStreamPump.cpp:397 3 @0x0 4 libxul.so nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:626 5 libxul.so NS_ProcessNextEvent_P nsThreadUtils.cpp:250 6 libxul.so nsBaseAppShell::Run widget/src/xpwidgets/nsBaseAppShell.cpp:195
Reporter | ||
Comment 1•10 years ago
|
||
correction first appearance looks to be 20101215 nsImapCacheStreamListener::OnStartRequest(nsIRequest*, nsISupports*) [1] bp-7ed85689-4e38-4683-987c-a2e2a2101214 12-14-2010 which puts it closer to the likes of bug 609683 http://hg.mozilla.org/comm-central/pushloghtml?startdate=2010-12-08&enddate=2010-12-14+03%3A00%3A00
A difficult to reproduce crash, but generally happens if Shredder has been running for a while, I then get a new message and click on the read column dot to toggle the message to read. The crash for the attached stack trace happened on toggling a message from read to unread; however, this was after many failed attempts to get a crash. My crash from a previous day: http://crash-stats.mozilla.com/report/index/bp-c1d6d07a-c257-442e-8099-7a6952110112
Assignee | ||
Comment 3•10 years ago
|
||
the cache listener is always initialized with "this" as the m_channelToUse, e.g., nsImapCacheStreamListener * cacheListener = new nsImapCacheStreamListener(); NS_ADDREF(cacheListener); cacheListener->Init(m_channelListener, this); which means we must be getting an OnStartRequest after an OnStopRequest, so conceivably, a null check for mChannelToUse in OnStartRequest might be sufficient.
Assignee | ||
Comment 4•10 years ago
|
||
Assignee: nobody → bienvenu
Attachment #503956 -
Flags: review?(bugzilla)
Assignee | ||
Comment 5•10 years ago
|
||
probably want this for 3.3a2, if possible.
Status: NEW → ASSIGNED
blocking-thunderbird5.0: --- → ?
Updated•10 years ago
|
blocking-thunderbird5.0: ? → alpha3+
Updated•10 years ago
|
Attachment #503956 -
Flags: review?(bugzilla) → review+
Assignee | ||
Comment 6•10 years ago
|
||
fixed on trunk - http://hg.mozilla.org/comm-central/rev/c903a7fb5e32
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.3a3
Updated•10 years ago
|
Crash Signature: [@ nsImapCacheStreamListener::OnStartRequest]
[@ nsImapCacheStreamListener::OnStartRequest(nsIRequest*, nsISupports*)]
You need to log in
before you can comment on or make changes to this bug.
Description
•