add null checks in nsImapCacheStreamListener to deal with unexpected start/stop requests, r=standard8, bug 625506